fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@
 .navigation{
     color: #777;
     float: right;
+    margin-right: 50px;
 }
 
 .background {
